# inventory-mngmt-fastapi

./: README.md
backend/: .flake8  .pre-commit-config.yaml  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  product.py  supplier.py
backend/app/routes/: mail.py  product.py  supplier.py
backend/app/schemas/: __init__.py  mail.py  product.py  supplier.py
